<resources>
    <string name="app_name">NFC Timing</string>
    <string name="title_home">Event Setup</string>
    <string name="start">Start List</string>
    <string name="finish">Results</string>

    <!-- Three dots menu -->
    <string name="event_mode">Event Mode</string>
    <string name="share_results">Send IOF XML</string>
    <string name="share_xml_via">Send IOF XML via</string>

    <!-- Switching modes -->
    <string name="switch_mode">Switch Mode</string>
    <string name="wjr_mode_description">WhyJustRun mode integrates with the WJR sites and can upload results but events must be created on the WJR server first.</string>
    <string name="local_mode_description">Local mode allows you to create new events but doesn\'t allow you to upload results, although they can still be exported.</string>
    <string-array name="app_modes">
        <item>WhyJustRun</item>
        <item>Local Only</item>
    </string-array>

    <!-- Main Activity -->
    <string name="no_nfc">No NFC adapter detected</string>
    <string name="no_nfc_limitations">No NFC on this device nor is Tappy External NFC installed.\nWill be limited to viewing start lists only.</string>
    <string name="nfc_disabled">NFC is disabled.  Please enable it in Settings</string>
    <string name="confirm_start">Confirm Start</string>
    <string name="confirm_start_msg">Confirm start for %1$s</string>
    <string name="confirm_finish">Confirm Finish</string>
    <string name="confirm_finish_msg">Confirm finish for %1$s</string>
    <string name="confirm_finish_replacement_msg">Confirm finish for %1$s?  They already have a finish time.</string>
    <string name="reassign_card">Reassign</string>

    <string name="enable_nfc">Enable NFC</string>
    <string name="enable_nfc_reason">Go to Settings to enable NFC</string>
    <string name="go">Go</string>

    <!-- Home Fragment Strings -->
    <string name="club">Club</string>
    <string name="get_clubs">Get Clubs</string>
    <string name="update_club">Pick Club</string>
    <string name="event">Event</string>
    <string name="get_events">Get Events</string>
    <string name="pick_event">Pick Event</string>
    <string name="wjr_credentials">WhyJustRun Credentials</string>
    <string name="wjr_credential_reason">Required to upload results</string>
    <string name="wjr_username">Username</string>
    <string name="wjr_pass">Password</string>
    <string name="save_credentials">Save Credentials</string>
    <string name="get_competitors">Download Start List</string>
    <string name="entry_list_success">Successfully downloaded and imported entries</string>
    <string name="entry_list_failure">Failed to download or import entries</string>
    <string name="version_string">Version: %1$s</string>
    <string name="get_people">Update WJR Database</string>
    <string name="people_last_update">Last Updated %1$s</string>
    <string name="updating_people">Updating WJR database, this can take up to 30s</string>
    <string name="download_people_fail">Failed to download WJR database</string>
    <string name="download_people_success">Success updating WJR database</string>

    <!-- Local Home Fragment -->
    <string name="import_from_file">Import From IOF XML</string>
    <string name="create_new_event">Add New Event</string>
    <string name="create_category">Add Category</string>

    <!-- Start List -->
    <string name="add_new">Add New Competitor</string>
    <string name="no_name">No name given.  Not adding competitor.</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="error_connect">Error fetching data</string>
    <string name="connected">Connected</string>
    <string name="stream_assigned">Streams Assigned</string>
    <string name="downloading">Downloading %1$d</string>
    <string name="success">Success</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="no_categories">No categories found.  Have you downloaded the start list?</string>

    <!-- Finish/Results fragment -->
    <string name="upload_results">Upload Results</string>
    <string name="status_dns">DNS</string>
    <string name="status_dnf">DNF</string>
    <string name="status_on_course">On Course</string>
    <string name="bad_request_reply">Error uploading: Server replied "%1$s"\n\nThis is often because of day-of registrants.\n\Do you want to try again without uploading day-of event registrants?</string>
    <string name="internal_error_reply">Error uploading: Server replied "%1$s"\n\nPlease check your username/password\n\n</string>
    <string name="success_uploading">Successfully uploaded results</string>
    <string name="error_uploading">Encountered an error connecting to server\n\nAre you connected to the internet?</string>
    <string name="save_password">Save Password</string>

    <string-array name="sorting_array">
        <item>Sort by status</item>
        <item>Sort by course</item>
        <item>Sort by name</item>
    </string-array>

    <!-- Common -->
    <string name="no_event">No Event Selected</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="never">Never</string>
</resources>
