<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"

    android:id="@+id/choice_grid"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:padding="4dp">

    <TextView
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/wjr_username"/>

    <EditText
        android:id="@+id/wjr_user"
        android:hint="@string/username"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/wjr_pass"/>

    <EditText
        android:id="@+id/wjr_pass"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <TextView
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/club"/>

    <Spinner
        android:id="@+id/club_spinner">

    </Spinner>

    <Button
        android:id="@+id/get_clubs"
        android:text="@string/get_clubs"/>

    <TextView
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/event"/>

    <Spinner
        android:id="@+id/event_spinner">

    </Spinner>

    <Button
        android:id="@+id/get_events"
        android:text="@string/get_events"/>
</GridLayout>