<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/upload_results" />

    <EditText
        android:id="@+id/username_input"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="20dp"
        android:hint="@string/wjr_username"/>

    <EditText
        android:id="@+id/password_input"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="20dp"
        android:hint="@string/wjr_pass"/>

    <CheckBox
        android:id="@+id/save_pass_checkbox"
        android:checked="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_credentials" />

</LinearLayout>