<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_new" />
    <EditText
        android:id="@+id/first_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/first_name"/>
    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/last_name"/>

    <Spinner
        android:id="@+id/new_person_category_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp">

    </Spinner>

</LinearLayout>